[package]
name = "tokio_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
kitty_proxy = { git = "https://github.com/hezhaozhao-git/kitty_proxy.git" }
log = "0.4.20"
tokio = "1.35.1"
env_logger = "0.9"


